--- a/Software/Annotations/res/layout/annotation_list_item.xml
+++ b/Software/Annotations/res/layout/annotation_list_item.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
+    android:layout_height="fill_parent"  
+    android:onClick="click"
+    android:focusable="true"
+    >
+	   	<TextView android:id="@+id/annotation_id"
+        	android:layout_height="wrap_content"
+        	android:layout_width="wrap_content"
+        	android:visibility="gone"
+        />
+        
+       	<TextView android:id="@+id/annotation_priority"
+        	android:layout_height="wrap_content"
+        	android:layout_width="wrap_content"
+        	android:textSize="15sp" 
+        	android:height="50dip"
+        	android:width="50dip"
+        	
+        />
+        
         <TextView android:id="@+id/annotation_author"
-	        android:layout_height="fill_parent"
+	        android:layout_height="wrap_content"
 	        android:layout_width="wrap_content"
-	        android:width="100dip"
-	        android:height="60dip"
-	        android:gravity="center"
+	        android:gravity="top|left"
+	        android:textSize="20sp" 
+	        android:height="25dip"
+	        android:width="350dip"
+	        android:layout_toRightOf="@id/annotation_priority"
 	        
 	    />
+
 	    <TextView android:id="@+id/annotation_content"
-	    	android:layout_height="fill_parent"
-	        android:layout_width="wrap_content"
-	        android:width="200dip"
-	        android:height="60dip"
-	        android:gravity="center"        
+        	android:layout_height="wrap_content"
+	        android:layout_width="fill_parent"
+	        android:width="350dip"
+	      	android:layout_toRightOf="@id/annotation_priority"
+			android:layout_below="@id/annotation_author"   
+	        android:textSize="10sp" 
 	    />
 	    
-	  <TextView android:id="@+id/annotation_priority"
-        	android:layout_height="fill_parent"
-        	android:layout_width="wrap_content"
-        	android:width="100dip"
-        	android:height="60dip"
-        	android:gravity="center"
-        />
-</LinearLayout>
+
+</RelativeLayout>
